--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1640,6 +1640,8 @@
     <string name="key_objectives_request_code" translatable="false">objectives_request_code</string>
     <string name="requestcode">Request code: %1$s</string>
     <string name="objectives_hint">(check all correct answers)</string>
+    <string name="profile_name">Profile name:</string>
+    <string name="selected_profile">Selected:</string>
 
     <plurals name="objective_days">
         <item quantity="one">%1$d day</item>
