--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -891,7 +891,7 @@
     <string name="enablesmbalways">Enable SMB always</string>
     <string name="enablesmbalways_summary">Enable SMB always independently to boluses. Possible only with BG source with nice filtering of data like G5</string>
     <string name="enablesmbhighbg">Enable SMB High BG</string>
-    <string name="enablesmbhighbg_summary">Enable SMB when BG is higher than the High value on the active profile. It will also enable SMB if higher than a single-value temp target.</string>
+    <string name="enablesmbhighbg_summary">Enable SMB when BG is higher than the High value on the active profile. High Temp Targets will disable this, Low Temp Targets will use the profile High value.</string>
     <string name="enablesmbaftercarbs">Enable SMB after carbs</string>
     <string name="enablesmbaftercarbs_summary">Enable SMB for 6h after carbs, even with 0 COB. Possible only with BG source with nice filtering of data like G5</string>
     <string name="enablesmbwithcob">Enable SMB with COB</string>
